# CryptoPocket

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
src/arena/: Cargo.toml
src/arena/src/: lib.rs
src/cryptopocket/arena/: init.py
src/cryptopocket/cffi/: init.py
src/cryptopocket/kernels/: init.py  se3_frame_attn.py
src/cryptopocket/model/: diffusion.py  encoder.py  init.py
src/cryptopocket/utils/: geometry.py  init.py
