[build-system]
requires = ["setuptools>=68", "wheel", "maturin>=1.4"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cryptopocket"
version = "0.1.0"
description = "Open-source SE(3)-equivariant cryptic binding pocket engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CryptoPocket Contributors"}
]
keywords = ["bioinformatics", "protein", "binding-pocket", "cryptic", "diffusion", "se3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "biopython>=1.83",
    "einops>=0.7",
    "omegaconf>=2.3",
    "hydra-core>=1.3",
    "rich>=13.0",
    "tqdm>=4.66",
    "pydantic>=2.0",
    "cupy-cuda12x>=13.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
triton = [
    "triton>=2.3.0",
]
arena = [
    "maturin>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
]
all = [
    "cryptopocket[triton,arena,dev]",
]

[project.scripts]
cryptopocket = "cryptopocket.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (skip with -m 'not slow')",
    "cuda: marks tests requiring CUDA",
    "integration: marks integration tests",
]
